BUGFIX: don't right align hentries

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,7 +149,7 @@ img {max-width:100%}
 
 .hfeed {margin-top:1em;}
 .hentry {margin-top:3em}
-.hentry ul {text-align:right;}
+/*.hentry ul {text-align:right;}*/
 .hreview {color #ccc}
 .hreview blockquote, .hreview q {font-style:normal;color:#444;border-left:none;margin:0;padding:0;color:inherit;font-style:inherit;font-size:inherit;font-weight:inherit;line-height:inherit;margin-bottom:2em}
 .hreview {list-style-type:none}
